[package]
name = "mwc"
version = "5.3.7"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.mwc", "**/*.mwc"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "mwc"
path = "src/bin/mwc.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.11"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
cursive_table_view = "0.15.0"
humansize = "1.1.0"
serde = "1"
futures = "0.3.19"
serde_json = "1"
log = "0.4"
term = "0.6"
thiserror = "1"

mwc_api = { path = "./api", version = "5.3.7" }
mwc_config = { path = "./config", version = "5.3.7" }
mwc_chain = { path = "./chain", version = "5.3.7" }
mwc_core = { path = "./core", version = "5.3.7" }
mwc_keychain = { path = "./keychain", version = "5.3.7" }
mwc_p2p = { path = "./p2p", version = "5.3.7" }
mwc_servers = { path = "./servers", version = "5.3.7" }
mwc_util = { path = "./util", version = "5.3.7" }

[dependencies.cursive]
version = "0.21"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
mwc_chain = { path = "./chain", version = "5.3.7" }
mwc_store = { path = "./store", version = "5.3.7" }

[profile.release-with-debug]
inherits = "release"
debug = true

#[profile.test]
#opt-level = 3  # Same as the release profile
#debug = false  # Disable debug symbols (if not needed)
#lto = true     # Enable Link-Time Optimization
#codegen-units = 1  # Optimize for size/speed
#overflow-checks = false

#[profile.release]
#debug = true