[package]
name = "mwc"
version = "7.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.mwc", "**/*.mwc"]
build = "src/build/build.rs"
edition = "2024"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "mwc_crates", "p2p", "servers", "store", "util", "pool", "node_workflow", "mwc_node_lib"]
exclude = ["etc/gen_gen"]

[workspace.dependencies]
thiserror = "2"
safer-ffi = { version = "0.1", features = ["std", "headers"] }

[[bin]]
name = "mwc"
path = "src/bin/mwc.rs"

[dependencies]
mwc_crates = { path = "./mwc_crates", version = "7.0.0" }
mwc_api = { path = "./api", version = "7.0.0" }
mwc_config = { path = "./config", version = "7.0.0" }
mwc_chain = { path = "./chain", version = "7.0.0" }
mwc_core = { path = "./core", version = "7.0.0" }
mwc_p2p = { path = "./p2p", version = "7.0.0" }
mwc_servers = { path = "./servers", version = "7.0.0" }
mwc_util = { path = "./util", version = "7.0.0" }
mwc_node_workflow = { path = "./node_workflow", version = "7.0.0" }
thiserror.workspace = true

[build-dependencies]
built = { version = "0.8", features = ["git2"] }

[features]
default = []
test-support = ["mwc_core/test-support"]

[profile.release-with-debug]
inherits = "release"
debug = true

#[profile.test]
#opt-level = 3  # Same as the release profile
#debug = false  # Disable debug symbols (if not needed)
#lto = true     # Enable Link-Time Optimization
#codegen-units = 1  # Optimize for size/speed
#overflow-checks = false

#[profile.release]
#debug = true
