[package]
name = "mwc_api"
version = "5.3.9"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "APIs for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
easy-jsonrpc-mw = "0.5.4"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1"
regex = "1"
ring = "0.16"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
http = "0.2"
hyper-timeout = "0.4"
futures = "0.3"
rustls = "0.20"
rustls-pemfile = "1.0"
async-stream = "0.3"
url = "2.1"
bytes = "1"
chrono = { version = "0.4.11", features = ["serde"] }

mwc_core = { path = "../core", version = "5.3.9" }
mwc_chain = { path = "../chain", version = "5.3.9" }
mwc_p2p = { path = "../p2p", version = "5.3.9" }
mwc_pool = { path = "../pool", version = "5.3.9" }
mwc_store = { path = "../store", version = "5.3.9" }
mwc_util = { path = "../util", version = "5.3.9" }

# NOTE. We can't have hyper-rustls the same version for Android and non android. because if how rust builds dependency.
# Android must have v0.20+
[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.23"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.21", default-features = false, features = ["webpki-tokio"] }
