[package]
name = "mwc_api"
version = "6.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "APIs for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
easy-jsonrpc-mwc = "0.5.6"
hyper = { version = "0.14", features = ["full"] }
ureq = "3"
lazy_static = "1"
regex = "1"
ring = "0.16"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
log = "0.4"
http = "0.2.12"
hyper-timeout = "0.4"
futures = "0.3"
rustls = "0.20"
rustls-pemfile = "1.0"
async-stream = "0.3"
url = "2.1"
chrono = { version = "0.4.11", features = ["serde"] }

mwc_core = { path = "../core", version = "6.0.0" }
mwc_chain = { path = "../chain", version = "6.0.0" }
mwc_p2p = { path = "../p2p", version = "6.0.0" }
mwc_pool = { path = "../pool", version = "6.0.0" }
mwc_util = { path = "../util", version = "6.0.0" }

# NOTE. We can't have hyper-rustls the same version for Android and non android. because if how rust builds dependency.
# Android must have v0.20+
[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.23"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio"] }

[features]
libp2p = ["mwc_p2p/libp2p"]