[package]
name = "mwc_chain"
version = "5.3.7"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Chain implementation for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bit-vec = "0.6"
bitflags = "1"
byteorder = "1"
croaring = "1.1"
enum_primitive = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
thiserror = "1"
chrono = "0.4.11"
lru = "0.12"
lazy_static = "1"
tokio = {version = "0.2", features = ["full"] }
num_cpus = "1"
crossbeam = "0.8"
sysinfo = "0.32"

mwc_core = { path = "../core", version = "5.3.7" }
mwc_keychain = { path = "../keychain", version = "5.3.7" }
mwc_store = { path = "../store", version = "5.3.7" }
mwc_util = { path = "../util", version = "5.3.7" }

[dev-dependencies]
env_logger = "0.7"
rand = "0.6"
