[package]
name = "mwc_config"
version = "5.3.2"
authors = ["Mwc Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/mwc"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"
thiserror = "1"

mwc_core = { path = "../core", version = "5.3.2" }
mwc_servers = { path = "../servers", version = "5.3.2" }
mwc_p2p = { path = "../p2p", version = "5.3.2" }
mwc_util = { path = "../util", version = "5.3.2" }

[dev-dependencies]
pretty_assertions = "0.6.1"
