[package]
name = "mwc_config"
version = "6.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Configuration for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"
thiserror = "1"

mwc_core = { path = "../core", version = "6.0.0" }
mwc_servers = { path = "../servers", version = "6.0.0" }
mwc_p2p = { path = "../p2p", version = "6.0.0" }
mwc_util = { path = "../util", version = "6.0.0" }

[dev-dependencies]
pretty_assertions = "0.6.1"
