[package]
name = "mwc_core"
version = "7.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Chain implementation for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2024"

[dependencies]
mwc_crates = { path = "../mwc_crates", version = "7.0.0" }
keychain = { package = "mwc_keychain", path = "../keychain", version = "7.0.0" }
util = { package = "mwc_util", path = "../util", version = "7.0.0" }
thiserror.workspace = true

[dev-dependencies]
blake2 = "0.10"

[features]
default = []
test-support = []
