[package]
name = "mwc_node_workflow"
version = "7.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2024"

[dependencies]
mwc_crates = { path = "../mwc_crates", version = "7.0.0" }
mwc_api = { path = "../api", version = "7.0.0" }
mwc_chain = { path = "../chain", version = "7.0.0" }
mwc_core = { path = "../core", version = "7.0.0" }
mwc_p2p = { path = "../p2p", version = "7.0.0" }
mwc_util = { path = "../util", version = "7.0.0" }
mwc_servers = { path = "../servers", version = "7.0.0" }
thiserror.workspace = true
