[package]
name = "mwc_p2p"
version = "5.3.5"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Chain implementation for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
enum_primitive = "0.1"
lru-cache = "0.1"
tor-stream = "0.2"
net2 = "0.2"
socks = "0.3.2"
thiserror = "1"
num = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
tempfile = "3.1"
log = "0.4"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3"
#libp2p-tokio-socks5 = { path = "../../rust-libp2p-tokio-socks5" }
#libp2p = { path = "../../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
mwc-libp2p-tokio-socks5 = { git = "https://github.com/mwcproject/rust-libp2p-tokio-socks5", version = "0.7.2", branch = "master"}
mwc-libp2p = { git = "https://github.com/mwcproject/rust-libp2p", branch = "master", version="0.35.3", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"]}
lazy_static = "1"
async-std = "1.9"
tokio = {version = "0.2", features = ["full"] }
ed25519-dalek = "1"
serde_json = "1"
bytes = "0.5"

mwc_core = { path = "../core", version = "5.3.5" }
mwc_store = { path = "../store", version = "5.3.5" }
mwc_util = { path = "../util", version = "5.3.5" }
mwc_chain = { path = "../chain", version = "5.3.5" }

[dev-dependencies]
mwc_pool = { path = "../pool", version = "5.3.5" }
