[package]
name = "mwc_pool"
version = "5.3.2"
authors = ["Mwc Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for mwc, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/mwc"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
thiserror = "1"
lru-cache = "0.1"
log = "0.4"
chrono = "0.4.11"

mwc_core = { path = "../core", version = "5.3.2" }
mwc_keychain = { path = "../keychain", version = "5.3.2" }
mwc_util = { path = "../util", version = "5.3.2" }

[dev-dependencies]
mwc_chain = { path = "../chain", version = "5.3.2" }
