[package]
name = "grin_servers"
version = "3.2.4-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.13"
hyper-timeout = "0.3"
spinner = "0.3"
fs2 = "0.4"
futures = "0.3"
http = "0.1"
regex = "1.3"
socks = "0.3.2"
timer = "0.2"
dirs = "1.0.3"
byteorder = "1"
crossbeam-utils = "0.7"
hyper-socks2 = "0.4"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
sysinfo = "0.9"
lmdb-zero = "0.4.4"
rand = "0.6"
rand_core = "0.5.1"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio = {version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
walkdir = "2.2.9"
failure = "0.1"
failure_derive = "0.1"

grin_api = { path = "../api", version = "3.2.4-beta.1" }
grin_chain = { path = "../chain", version = "3.2.4-beta.1" }
grin_core = { path = "../core", version = "3.2.4-beta.1" }
grin_keychain = { path = "../keychain", version = "3.2.4-beta.1" }
grin_p2p = { path = "../p2p", version = "3.2.4-beta.1" }
grin_pool = { path = "../pool", version = "3.2.4-beta.1" }
grin_store = { path = "../store", version = "3.2.4-beta.1" }
grin_util = { path = "../util", version = "3.2.4-beta.1" }


[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.19"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.20", default-features = false, features = ["webpki-tokio"] }
