[package]
name = "mwc_servers"
version = "5.3.6"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.13"
fs2 = "0.4"
futures = "0.3"
http = "0.2"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.11"
tokio = {version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
walkdir = "2.3.1"
thiserror = "1"
ed25519-dalek = "1"
regex = "1.3"
sysinfo = "0.9"
dirs = "1.0.3"
timer = "0.2"
atomic_float = "1.0"

mwc_api = { path = "../api", version = "5.3.6" }
mwc_chain = { path = "../chain", version = "5.3.6" }
mwc_core = { path = "../core", version = "5.3.6" }
mwc_keychain = { path = "../keychain", version = "5.3.6" }
mwc_p2p = { path = "../p2p", version = "5.3.6" }
mwc_pool = { path = "../pool", version = "5.3.6" }
mwc_store = { path = "../store", version = "5.3.6" }
mwc_util = { path = "../util", version = "5.3.6" }

# NOTE. We can't have hyper-rustls the same version for Android and non android. because if how rust builds dependency.
# Android must have v0.20+
[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.20"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.21", default-features = false, features = ["webpki-tokio"] }
