[package]
name = "mwc_util"
version = "5.3.6"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
data-encoding = "2"
ed25519-dalek = "1"
sha3 = "0.8"
base64 = "0.12"
byteorder = "1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.12", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5.11", default-features = false }
parking_lot = "0.10"
zeroize = { version = "1.1", features =["zeroize_derive"] }
thiserror = "1"

mwc_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", version= "0.7.16", tag = "0.7.16", features = ["bullet-proof-sizing"] }
