[package]
name = "mwc_util"
version = "6.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
data-encoding = "2"
ed25519-dalek = "1"
sha3 = "0.8"
base64 = "0.12"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "1.3", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller", "gzip"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5.11", default-features = false }
parking_lot = "0.12"
zeroize = { version = "1.1", features =["zeroize_derive"] }
thiserror = "1"
tokio = {version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-socks = "0.5"
tokio-rustls = "0.23"

mwc_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", version= "0.7.16", tag = "0.7.16", features = ["bullet-proof-sizing"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry","std"],  default-features = false }
tracing = "0.1.41"