[package]
name = "mwc_util"
version = "7.0.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2024"

[dependencies]
mwc_crates = { path = "../mwc_crates", version = "7.0.0" }
thiserror.workspace = true
